--- a/.github/workflows/e2e-nightly-devnet.yml
+++ b/.github/workflows/e2e-nightly-devnet.yml
@@ -157,4 +157,4 @@ jobs:
       if: ${{ !cancelled() }}
       run: |
         cd e2e-tests
-        npx github-actions-ctrf logs/ctrf-report.json
+        npx github-actions-ctrf ctrf-report.json
