--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -92,27 +92,29 @@ partner-chains-demo-runtime = { workspace = true }
 sidechain-mc-hash = { workspace = true, features = ["mock"] }
 sp-native-token-management = { workspace = true }
 partner-chains-db-sync-data-sources = { workspace = true, features = [
-    "block-source",
-    "candidate-source",
-    "governed-map",
-    "native-token",
-    "mc-hash",
-    "sidechain-rpc",
-    "block-participation",
+	"block-source",
+	"candidate-source",
+	"governed-map",
+	"native-token",
+	"mc-hash",
+	"sidechain-rpc",
+	"block-participation",
 ] }
 partner-chains-mock-data-sources = { workspace = true, features = [
-    "block-source",
-    "candidate-source",
-    "governed-map",
-    "native-token",
-    "mc-hash",
-    "sidechain-rpc",
-    "block-participation",
+	"block-source",
+	"candidate-source",
+	"governed-map",
+	"native-token",
+	"mc-hash",
+	"sidechain-rpc",
+	"block-participation",
 ] }
 tokio = { workspace = true }
 sp-block-participation = { workspace = true, features = ["std"] }
 sp-block-producer-metadata = { workspace = true, features = ["std"] }
 pallet-block-producer-metadata-rpc = { workspace = true }
+sc-offchain = { workspace = true }
+sc-statement-store = { workspace = true }
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true }
