--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -93,6 +93,7 @@ pallet-block-participation = { workspace = true }
 sp-block-participation = { workspace = true }
 pallet-governed-map = { workspace = true }
 sp-governed-map = { workspace = true }
+sp-statement-store = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
