use smart contracts v7.1.1

--- a/toolkit/smart-contracts/offchain/Cargo.toml
+++ b/toolkit/smart-contracts/offchain/Cargo.toml
@@ -36,6 +36,7 @@ sidechain-domain = { workspace = true, features = ["std"] }
 uplc = { workspace = true }
 tokio = { workspace = true }
 tokio-retry = { workspace = true }
+itertools = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
