--- a/toolkit/smart-contracts/offchain/Cargo.toml
+++ b/toolkit/smart-contracts/offchain/Cargo.toml
@@ -42,3 +42,4 @@ proptest = { workspace = true }
 time = { workspace = true, features = ["std", "serde", "parsing"] }
 pretty_assertions = { workspace = true }
 testcontainers = { workspace = true }
+itertools = { workspace = true }
