--- a/.github/actions/deploy/deploy-ci-preview/action.yml
+++ b/.github/actions/deploy/deploy-ci-preview/action.yml
@@ -84,11 +84,11 @@ runs:
     - name: Deploy with chain-spec and image override
       run: |
         cd sidechains-infra-priv/src/kube/helm/partner-chains-node-chart/
-        helm upgrade --install ci-preview-validator-1 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-1 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="ci-preview-chain-spec-${{ inputs.sha }}"
-        helm upgrade --install ci-preview-validator-2 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-2 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="ci-preview-chain-spec-${{ inputs.sha }}"
-        helm upgrade --install ci-preview-validator-3 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-3 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="ci-preview-chain-spec-${{ inputs.sha }}"
-        helm upgrade --install ci-preview-validator-4 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-4 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="ci-preview-chain-spec-${{ inputs.sha }}"
-        helm upgrade --install ci-preview-validator-5 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-5 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="ci-preview-chain-spec-${{ inputs.sha }}"
+        helm upgrade --install ci-preview-validator-1 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-1 --set images.substrateNode="${{ inputs.image }}"
+        helm upgrade --install ci-preview-validator-2 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-2 --set images.substrateNode="${{ inputs.image }}"
+        helm upgrade --install ci-preview-validator-3 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-3 --set images.substrateNode="${{ inputs.image }}"
+        helm upgrade --install ci-preview-validator-4 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-4 --set images.substrateNode="${{ inputs.image }}"
+        helm upgrade --install ci-preview-validator-5 . -f values/chains/ci-preview.yaml -f values/nodes/ci-preview/validator/ci-preview-validator-5 --set images.substrateNode="${{ inputs.image }}"
       shell: bash
 
     - name: Wait
