--- a/.github/actions/deploy/upload-chain-specs/action.yml
+++ b/.github/actions/deploy/upload-chain-specs/action.yml
@@ -40,49 +40,61 @@ runs:
       with:
         name: chain-specs
 
-    - name: Upload chain‑spec artifacts to PVC
+    - name: Upload chain‑spec artifacts to PVCs
       shell: bash
       run: |
-        upload_to_pvc() {
-          NS=$1 SRC_FILE=$2 DST_FILE=$3
-          POD_NAME="pvc-uploader-${NS}"
+        JSON_OVERRIDE='{
+          "spec":{
+            "containers":[{
+              "name":"uploader",
+              "image":"alpine",
+              "command":["sleep","600"],
+              "volumeMounts":[{"name":"chain-spec","mountPath":"/mnt/chain-spec"}]
+            }],
+            "volumes":[{"name":"chain-spec","persistentVolumeClaim":{"claimName":"chain-spec-pvc"}}]
+          }
+        }'
 
-          # create temp pod
-          cat <<'POD' | kubectl apply -n "$NS" -f -
-          apiVersion: v1
-          kind: Pod
-          metadata:
-            name: ${POD_NAME}
-          spec:
-            restartPolicy: Never
-            containers:
-            - name: uploader
-              image: alpine
-              command: ["sleep", "600"]
-              volumeMounts:
-              - name: chain-spec
-                mountPath: /mnt/chain-spec
-            volumes:
-            - name: chain-spec
-              persistentVolumeClaim:
-                claimName: chain-spec-pvc
-          POD
+        # -------- devnet / sc --------
+        POD=sc                         # namespace
+        kubectl run pvc-uploader-sc -n "$POD" --restart=Never --image=alpine --command --overrides="$JSON_OVERRIDE" -- sleep 600
+        kubectl wait --for=condition=Ready pod/pvc-uploader-sc -n "$POD" --timeout=60s
+        if [ -f ./devnet_chain_spec.json ]; then
+          kubectl cp ./devnet_chain_spec.json "$POD"/pvc-uploader-sc:/mnt/chain-spec/devnet-chain-spec-${{ inputs.sha }}.json
+        fi
+        kubectl delete pod pvc-uploader-sc -n "$POD" --wait
 
-          echo "Waiting for pod $POD_NAME in $NS…"
-          kubectl wait --for=condition=Ready pod/"$POD_NAME" -n "$NS" --timeout=60s
-          echo "Uploading $SRC_FILE → /mnt/chain-spec/$DST_FILE"
-          kubectl cp "./$SRC_FILE" "$NS/$POD_NAME:/mnt/chain-spec/$DST_FILE"
-          kubectl delete pod "$POD_NAME" -n "$NS" --wait
-        }
+        # -------- ci-preview --------
+        POD=ci-preview
+        kubectl run pvc-uploader-ci-preview -n "$POD" --restart=Never --image=alpine --command --overrides="$JSON_OVERRIDE" -- sleep 600
+        kubectl wait --for=condition=Ready pod/pvc-uploader-ci-preview -n "$POD" --timeout=60s
+        if [ -f ./ci_preview_chain_spec.json ]; then
+          kubectl cp ./ci_preview_chain_spec.json "$POD"/pvc-uploader-ci-preview:/mnt/chain-spec/ci-preview-chain-spec-${{ inputs.sha }}.json
+        fi
+        kubectl delete pod pvc-uploader-ci-preview -n "$POD" --wait
 
-        [ -f ./devnet_chain_spec.json ]          && upload_to_pvc sc              devnet_chain_spec.json          "devnet-chain-spec-${{ inputs.sha }}.json"
-        [ -f ./ci_preview_chain_spec.json ]      && upload_to_pvc ci-preview      ci_preview_chain_spec.json      "ci-preview-chain-spec-${{ inputs.sha }}.json"
-        [ -f ./staging_preview_chain_spec.json ] && upload_to_pvc staging-preview staging_preview_chain_spec.json "staging-preview-chain-spec-${{ inputs.sha }}.json"
-        [ -f ./staging_preprod_chain_spec.json ] && upload_to_pvc staging-preprod staging_preprod_chain_spec.json "staging-preprod-chain-spec-${{ inputs.sha }}.json"
+        # -------- staging-preview --------
+        POD=staging-preview
+        kubectl run pvc-uploader-staging-preview -n "$POD" --restart=Never --image=alpine --command --overrides="$JSON_OVERRIDE" -- sleep 600
+        kubectl wait --for=condition=Ready pod/pvc-uploader-staging-preview -n "$POD" --timeout=60s
+        if [ -f ./staging_preview_chain_spec.json ]; then
+          kubectl cp ./staging_preview_chain_spec.json "$POD"/pvc-uploader-staging-preview:/mnt/chain-spec/staging-preview-chain-spec-${{ inputs.sha }}.json
+        fi
+        kubectl delete pod pvc-uploader-staging-preview -n "$POD" --wait
+
+        # -------- staging-preprod --------
+        POD=staging-preprod
+        kubectl run pvc-uploader-staging-preprod -n "$POD" --restart=Never --image=alpine --command --overrides="$JSON_OVERRIDE" -- sleep 600
+        kubectl wait --for=condition=Ready pod/pvc-uploader-staging-preprod -n "$POD" --timeout=60s
+        if [ -f ./staging_preprod_chain_spec.json ]; then
+          kubectl cp ./staging_preprod_chain_spec.json "$POD"/pvc-uploader-staging-preprod:/mnt/chain-spec/staging-preprod-chain-spec-${{ inputs.sha }}.json
+        fi
+        kubectl delete pod pvc-uploader-staging-preprod -n "$POD" --wait
 
     - name: Cleanup temp uploader pods
       shell: bash
       run: |
-        for ns in sc ci-preview staging-preview staging-preprod; do
-          kubectl delete pod "pvc-uploader-${ns}" -n "$ns" --ignore-not-found --wait
-        done
+        kubectl delete pod pvc-uploader-sc              -n sc              --ignore-not-found --wait
+        kubectl delete pod pvc-uploader-ci-preview      -n ci-preview      --ignore-not-found --wait
+        kubectl delete pod pvc-uploader-staging-preview -n staging-preview --ignore-not-found --wait
+        kubectl delete pod pvc-uploader-staging-preprod -n staging-preprod --ignore-not-found --wait
