--- a/.github/actions/deploy/deploy-staging-preview/action.yml
+++ b/.github/actions/deploy/deploy-staging-preview/action.yml
@@ -84,11 +84,11 @@ runs:
     - name: Deploy with chain-spec and image override
       run: |
         cd sidechains-infra-priv/src/kube/helm/partner-chains-node-chart/
-        helm upgrade --install staging-preview-validator-1 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-1 --set images.substrateNode="${{ inputs.image }}"
-        helm upgrade --install staging-preview-validator-2 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-2 --set images.substrateNode="${{ inputs.image }}"
-        helm upgrade --install staging-preview-validator-3 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-3 --set images.substrateNode="${{ inputs.image }}"
-        helm upgrade --install staging-preview-validator-4 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-4 --set images.substrateNode="${{ inputs.image }}"
-        helm upgrade --install staging-preview-validator-5 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-5 --set images.substrateNode="${{ inputs.image }}"
+        helm upgrade --install staging-preview-validator-1 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-1 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-2 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-2 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-3 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-3 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-4 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-4 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-5 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-5 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
       shell: bash
 
     - name: Wait
