--- a/toolkit/block-participation/pallet/Cargo.toml
+++ b/toolkit/block-participation/pallet/Cargo.toml
@@ -37,5 +37,6 @@ std = [
     "scale-info/std",
     "sp-std/std",
     "sp-block-participation/std",
+    "frame-benchmarking?/std"
 ]
 runtime-benchmarks = ["frame-benchmarking"]
