--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -13,6 +13,7 @@ markers =
     mc_state_reference_block: run tests for Mainchain State Reference feature
     block_production_log: run test for block production log pallet
     reserve: run tests for Reserve Managemenet System feature
+    governed_map: run tests for Governed Map feature
     rpc: run tests for RPC endpoints
     substrate: run tests for Substrate framework core features
     test_key: key for xray
